--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-streamlit~=1.35
-feedparser~=6.0
-pyperclip~=1.8
-python-dateutil~=2.9
-beautifulsoup4~=4.12
-requests~=2.31
+streamlit>=1.33.0
+feedparser>=6.0.11
